# IELEG2213---Robotic-arm

./: README.md
IK/: .gitignore  IK_class.py  const.py  functions.py  main.py
Jetson_CV/: CMakeLists.txt  camera_test.py  depth_test.py  kl_detect.py  no_ws_detect.py  object_detection.py  send_data.py  send_data_test.py  test.py  test_depth.py
Jetson_CV/Test/: my-recognition.py  no_ws_detect.py  send_data_test.py  test.py
m_Control/: platformio.ini
m_Control/lib/: README.md  keyboard_listener.py
m_Control/lib/Setup/: main.cpp  ps5_Script.py  vector_Handler.py
m_Control/lib/Websocket/: Websocket 2.cpp  Websocket 2.h  Websocket.cpp  Websocket.h  main.cpp
m_Control/lib/keyboard_Support_Files/: keyboard_LED.py
m_Control/lib/manualHandling/: keyboard_handler.py  ps5_handlers.py
m_Control/lib/preBLE/: esp32_ble_control.py  main.py  ps5_controller 2.py
m_Control/lib/ps5_Support_Files/: ps5C_Battery.py  ps5C_MacAddress 2.py  ps5C_print.py  tempCodeRunnerFile.py
m_Control/lib/python websocket/: client 2.py  client.py  tempCodeRunnerFile.py  websocket.py
m_Control/lib/servoHandler/: ServoHandler.cpp  ServoHandler.h  main.cpp
m_Control/src/: main.cpp  main.py  ps5_controller.py  server.py  tempCodeRunnerFile.py  test_server.py
m_Control/test/: README
